--- a/Front/Agregar_Libro.html
+++ b/Front/Agregar_Libro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-        <Form action="" method="POST">
+        <Form action="/Libreria/Back/agregarLibro.php" method="POST">
             <label for = "title">Titulo</label>
             <input type = "text" name="Titulo" id="Titulo" required>
             <br>
