--- a/Front/libro.html
+++ b/Front/libro.html
@@ -11,7 +11,11 @@
         <h1>Libro: </h1>
         <h2>Autor: </h2>
         <h3>Comentarios: </h3>
-        <textarea name="comentarios" rows="10" cols="40">Escribe aquí tus comentarios</textarea>
-        <button>Comentar</button>
+        
     </body>
+    <form action="/Libreria/Back/comentar.php" method="POST">
+        <textarea name="coment" rows="10" cols="40" type="text" id="coment">Escribe aquí tus comentarios</textarea>
+        <br>
+        <input type="submit" value="Comentar">
+    </form>
 </html>
